--- a/[davizuku] Miscellaneous Topics.ipynb
+++ b/[davizuku] Miscellaneous Topics.ipynb
@@ -999,6 +999,15 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
